--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-/*Markdown Preview: "alt+shift+m"
 /*
 # 見出し１
-
+Markdown Preview: "alt+shift+m"
 
 
 
@@ -31,6 +30,69 @@ cd
 
 */
 
+html, body, div, span, applet, object, iframe, strong, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, legend, caption, tbody, tfoot, thead, table, label, tr, th, td {
+    margin: 0px;
+    padding: 0px;
+    outline: 0px;
+    border: 0px;
+    list-style: none;
+    vertical-align: baseline;
+    font-weight: normal;
+    font-size: 100%;
+}
+html {
+    background: url(images/dominomatrix-bg_003_01.jpg) left top repeat;
+    background-color: $bg-color;
+}
+body {
+    background-color: transparent;
+    color: $base-font-color;
+    word-wrap: break-word;
+    font-weight: 400;
+    font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", Sans-Serif;
+    text-rendering: optimizeLegibility;
+}
+a {
+    @include transition(color 0.1s linear);
+    color: $sub-color;
+    text-decoration: underline;
+    &:hover {
+        color: lighten($sub-color, 8%);
+    }
+}
+.clear {
+    clear: both;
+    line-height: 0;
+}
+$supportIE: true; //not support to change :false
+.clearfix {
+    @include clearfix();
+    @if $supportIE {
+        *zoom: 1;
+    }
+}
+::selection {
+    background: #cbf2ff;
+    color: #555;
+}
+[type="search"] {
+    @include appearance(textfield);
+}
+strong, em {
+    font-weight: bold;
+}
+ul li, ol li {
+    line-height: 1.8;
+    list-style: none;
+}
+textarea {
+    min-height: 200px;
+    height: auto;
+}
+input[type="text"] {
+    width: 200px;
+    height: auto;
+}
 .headLine {
   padding: 5px 0;
   width: 100%;
@@ -46,6 +108,50 @@ cd
 .hl2 p{color: #FF9900;padding: 5px 0; }
 
 /*
+# Color Pallets
+
+`.primary-color` : lighten-brown
+`.base-font-color` : dark-blue
+`.sub-color` : ligten-blue
+`.sub2-color` : dark-blue (alpha)
+`.accsent-color` : orange
+
+```
+<ulclass="color-pallets-container">
+  <li class="color box primary-color">box</li>
+  <li class="color box base-font-color">box</li>
+  <li class="color box sub-color">box</li>
+  <li class="color box sub2-color">box</li>
+  <li class="color box accsent-color">box</li>
+</li>
+```
+*/
+
+.color-pallets-container {
+  overflow: auto;
+  width: 600px;
+  height: 200px;
+  background-color: #EEE;
+}
+.color {
+  text-align: center;
+  color: #eee;
+}
+.box {
+  float: left;
+  display: inline-block;
+  margin: 10px;
+  padding: 5px;
+  width: 80px;
+  height: 80px;
+}
+.primary-color {background-color: rgb(185, 182, 166);}
+.base-font-color {background-color: #172435;}
+.sub-color {background-color: #5888ad;}
+.sub2-color {background-color: rgba(28, 38, 46, 0.45);}
+.accsent-color {background-color: #f0ac55; //orange}
+
+/*
 # Main Layout
 
 ```
@@ -53,8 +159,8 @@ cd
   <div id="main" class="contents-shadow small-8 columns">
 
 <div class="nav-below">
-  <span class="nav-previous"><?php next_posts_link( '古い記事へ' ) ?></span>
-  <span class="nav-next"><?php previous_posts_link( '新しい記事へ' ) ?></span>
+  <span class="nav-previous"></span>
+  <span class="nav-next"></span>
 </div>
 <!-- /.nav-below -->
 </div><!-- /#main -->
@@ -75,8 +181,9 @@ cd
 
 /*
 # typography & text-style
+```
 
-
+```
 */
 
 /*
@@ -84,80 +191,105 @@ cd
 ## Navigation Style
 
 ```
-<nav class="menu-home-container"><ul id="menu-navigatie" class="g-menu"><li id="menu-item-693" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-693"><a href="#portfolio">Portfolio</a></li>
-<li id="menu-item-691" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-691"><a href="#blog">Blog</a></li>
-<li id="menu-item-694" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-694"><a href="#about">About Me</a></li>
-</ul></nav>
+<div class="top-bar-container fixed" id="menu-home-container">
+    <div class="contain-to-grid">
+        <nav class="top-bar">
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="http://127.0.0.1/mysite">DOMINOMATRIX</a></h1>
+                </li>
+                <li class="toggle-topbar menu-icon"><a href="/"><span>Menu</span></a></li>
+            </ul>
+
+            <section class="top-bar-section" style="left: 0%;">
+                    <!-- Left navi section -->
+                    <ul id="menu-front-page-nav" class="top-bar-menu left">
+                        <li class="divider"></li>
+                        <li id="menu-item-693" class="left menu-item menu-item-type-custom menu-item-object-custom menu-item-693"><a href="#portfolio">Portfolio</a></li>
+                        <li class="divider"></li>
+                        <li id="menu-item-691" class="left menu-item menu-item-type-custom menu-item-object-custom menu-item-691"><a href="#blog">Blog</a></li>
+                        <li class="divider"></li>
+                        <li id="menu-item-694" class="right menu-item menu-item-type-custom menu-item-object-custom menu-item-694"><a href="#about">About Me</a></li>
+                        <li class="divider"></li>
+                        <li id="menu-item-884" class="right menu-item menu-item-type-custom menu-item-object-custom menu-item-884"><a href="#contact">Contact</a></li>
+                      </ul>
+
+                    <!-- Right navi section -->
+                      <ul id="menu-front-page-nav-1" class="top-bar-menu right">
+                        <li class="divider"></li>
+                        <li class="left menu-item menu-item-type-custom menu-item-object-custom menu-item-693"><a href="#portfolio">Portfolio</a></li>
+                        <li class="divider"></li>
+                        <li class="left menu-item menu-item-type-custom menu-item-object-custom menu-item-691"><a href="#blog">Blog</a></li>
+                        <li class="divider"></li>
+                        <li class="right menu-item menu-item-type-custom menu-item-object-custom menu-item-694"><a href="#about">About Me</a></li>
+                        <li class="divider"></li>
+                        <li class="right menu-item menu-item-type-custom menu-item-object-custom menu-item-884"><a href="#contact">Contact</a></li>
+                      </ul>
+            </section>
+        </nav>
+    </div>
+</div>
 ```
 
 */
 
-.menu-home-container {
+#menu-home-container {
+    width: 100%;
+    height: 60px;
+    background: url(images/header_container_02.png) repeat-x 50% 0;
+}
+
+.contain-to-grid {
+  width: 100%;
+  background: #111111;
+}
+.contain-to-grid .top-bar {
+  margin-bottom: 1.875em;
+}
+
+.fixed {
+  width: 100%;
+  left: 0;
   position: fixed;
   top: 0;
-  left: 0;
-  z-index: 100;
-  width: 100%;
-  height: 60px;
-  background: url(images/header_container_02.png) repeat-x 50% 0;
+  z-index: 99;
 }
-
-#header ul.g-menu {
+.top-bar {
+background-color: rgba(0, 0, 0, 0);
+font-weight: bold;
+font-family: 'NoticiaTextRegular';
+}
+.top-bar {
+  overflow: hidden;
+  height: 45px;
+  line-height: 45px;
   position: relative;
-  margin: 0 auto;
-  max-width: 960px;
-  height: 76px;
-  font-weight: 200;
-  font-size: 150%;
-  font-family: 'NoticiaTextRegular', Sans-Serif;
+  background: #111111;
+  margin-bottom: 1.875em;
 }
-
-ul#menu-navigatie li {
-  float: left;
-  width: 15%;
+.top-bar ul {
+  margin-bottom: 0;
   list-style: none;
-  text-align: center;
-  > a {
-    display: block;
-    padding: 7px 10px;
-    color: #C5BEAB;
-    text-decoration: none;
-  }
 }
-
-.g-menu ul li > a {
-  display: block;
-  padding: 7px 10px;
-  color: #b9b6a6;
-  text-decoration: none;
+.top-bar.expanded {
+height: auto;
+background: rgba(0, 0, 0, 0);
 }
-
-.menu-home-container ul#menu-navigatie li.intro {
-  margin: 0 3% 0;
-  width: 220px;
-  height: 76px;
-  background: url(images/dm-nav-top-bg.png) no-repeat 50% 0;
+.top-bar-section ul {
+width: auto;
+height: auto !important;
+display: inline;
 }
-
-ul#menu-navigatie {
-  li:hover > a {
-    color: #D9A509;
-  }
-  > li {
-    &.current_page_item > a, &.current_page_ancestor > a, &.current-menu-item > a, &.current-category-ancestor > a {
-      color: #D9A509;
-    }
-  }
+.top-bar-section ul li {
+float: left;
 }
-
-div {
-  &.g-menu ul {
-    li:hover > a {
-      color: #deaa5b;
-    }
-    > li {
-      &.current_page_item a, &.current_page_ancestor > a, &.current-menu-item > a, &.current-category-ancestor > a {
-        color: #deaa5b;
-      }
-    }
-  }
+.top-bar-section ul li > a {
+display: block;
+width: 100%;
+color: #FFF;
+padding: 12px 0 12px 0;
+padding-left: 15px;
+font-size: 0.8125em;
+font-weight: bold;
+background: #222;
+}
